# calculus-of-learning

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pyproject.toml
experiments/e1_error_laws/: eval_toy.py  train_toy.py
experiments/e2_frame_freedom/: analyze_e2.py  collect_e2.py  eval_e2.py  sanity_shift_e2.py  train_e2.py
experiments/e3_plan_transfer/: transfer_plan.py
scripts/: run_e1_error_laws.sh  run_e2_frame_freedom.sh  run_e3_plan_transfer.sh  setup_env.sh
scripts/collab/: README.md  setup_colab.sh  setup_colab_tpu.sh
scripts/kaggle/: README.md  setup_kaggle_2xt4.sh  setup_kaggle_rtx6000.sh  setup_kaggle_tpu_v5e8.sh
src/envs/: dmc_ood.py  linear.py
src/models/: mappings.py  mlp_predictors.py  regularizers.py
src/visualization/: metrics.py  plotter.py
