[project]
name = "calculus-of-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "jupyter",
    "matplotlib",
    "mujoco",
    "dm_control",
    "numpy",
    "pandas",
    "scipy",
    "seaborn",
    "torch",
    "torchvision",
    "wandb>=0.28.1",
    "flax>=0.10.7",
    "optax>=0.2.8",
    "tensorflow-cpu>=2.21.0",
    "jax[cuda12]>=0.6.2",
    "scikit-learn>=1.7.2",
]
